--- a/Weather-App-master/index.html
+++ b/Weather-App-master/index.html
@@ -21,7 +21,7 @@
         <button id="getWeatherForecast"><b>Search</b></button>
         <div id="showWeatherForecast"></div><br></br><br></br><br></br>
         <footer>
-            <h4>Developed  by Om Gunjal</h4>
+            <h4>Developed  by Amgoth Shashikumar</h4>
         </footer>
     </div>
 </body>
